updated README with steps to launch discrn dev portal site

--- a/dev-portal/public/custom-content/styles.css
+++ b/dev-portal/public/custom-content/styles.css
@@ -3,3 +3,7 @@
 Add your custom styling here. Note that styling in the source is loaded AFTER this sheet, and has higher priority. Make sure your styles here don't collide with source styles.
 
 */
+
+.ui.vertical.center.aligned.segment {
+    background-color: #09202a
+}
